# PluginFramework

./: CMakeLists.txt  README.md
src/: Application.cc  Application.hh  CMakeLists.txt  DynamicLibrary.cc  DynamicLibrary.hh  LayerInterface.hh  Namespace.hh  Plugin.hh  PluginLayer0.cc  PluginLayer0.hh  PluginLayer1.cc  PluginLayer1.hh  PluginManager.cc  PluginManager.hh  main.cc
